Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5525

Assertion `status == 0' fails on creating user after granting it role admin option

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.7
    • 10.0.8
    • None
    • None

    Description

      create role r1 with admin u1;
      create user u1@localhost;

      sql/sql_acl.cc:2426: my_bool add_role_user_mapping_action(void*, void*): Assertion `status == 0' failed.
      140113 16:29:50 [ERROR] mysqld got signal 6 ;

      #7  0x00007fdb40a86192 in __GI___assert_fail (assertion=0xede8d6 "status == 0", file=0xeddfc0 "10.0/sql/sql_acl.cc", line=2426, function=0xee13c0 "my_bool add_role_user_mapping_action(void*, void*)") at assert.c:103
      #8  0x00000000005c859d in add_role_user_mapping_action (ptr=0x7fdb400267a0, unused=0x0) at 10.0/sql/sql_acl.cc:2426
      #9  0x0000000000ddd056 in my_hash_iterate (hash=0x17d2c80, action=0x5c853b <add_role_user_mapping_action(void*, void*)>, argument=0x0) at 10.0/mysys/hash.c:764
      #10 0x00000000005c8648 in rebuild_role_grants () at 10.0/sql/sql_acl.cc:2451
      #11 0x00000000005c76d9 in acl_insert_user (user=0x7fdb381bc130 "u1", host=0x7fdb381bc138 "localhost", password=0xeeddc0 "", password_len=0, ssl_type=SSL_TYPE_NOT_SPECIFIED, ssl_cipher=0x0, x509_issuer=0x0, x509_subject=0x0, mqh=0x7fdb39ff0de0, privileges=0, plugin=0x7fdb381bc178, auth=0x7fdb381bc188) at 10.0/sql/sql_acl.cc:2086
      #12 0x00000000005cb842 in replace_user_table (thd=0x7fdb39fec070, table=0x7fdb3b7dd470, combo=..., rights=0, revoke_grant=false, can_create_user=true, no_auto_create=false) at 10.0/sql/sql_acl.cc:3271
      #13 0x00000000005dcf47 in mysql_create_user (thd=0x7fdb39fec070, list=..., handle_as_role=false) at 10.0/sql/sql_acl.cc:9150
      #14 0x00000000006529b7 in mysql_execute_command (thd=0x7fdb39fec070) at 10.0/sql/sql_parse.cc:4038
      #15 0x0000000000658f26 in mysql_parse (thd=0x7fdb39fec070, rawbuf=0x7fdb381bc088 "create user u1@localhost", length=24, parser_state=0x7fdb428804b0) at 10.0/sql/sql_parse.cc:6394
      #16 0x000000000064b8a8 in dispatch_command (command=COM_QUERY, thd=0x7fdb39fec070, packet=0x7fdb3ab35071 "create user u1@localhost", packet_length=24) at 10.0/sql/sql_parse.cc:1296
      #17 0x000000000064abf6 in do_command (thd=0x7fdb39fec070) at 10.0/sql/sql_parse.cc:993
      #18 0x000000000076b719 in do_handle_one_connection (thd_arg=0x7fdb39fec070) at 10.0/sql/sql_connect.cc:1379
      #19 0x000000000076b46c in handle_one_connection (arg=0x7fdb39fec070) at 10.0/sql/sql_connect.cc:1293
      #20 0x0000000000a121af in pfs_spawn_thread (arg=0x7fdb39e5b850) at 10.0/storage/perfschema/pfs.cc:1853
      #21 0x00007fdb41c57e9a in start_thread (arg=0x7fdb42881700) at pthread_create.c:308
      #22 0x00007fdb40b4b3fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      revision-id: elenst@opensuse.home-20131228163657-kk32bmtqogy61mwm
      revno: 3962
      branch-nick: 10.0

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.